--- a/CSS/style.css
+++ b/CSS/style.css
@@ -75,3 +75,41 @@ button:hover {
     width: 75px;
     margin-bottom: 40px;
 }
+
+.middle {
+    display: flex;
+    justify-content: center;
+    margin-top: 250px;
+}
+
+#endContainer {
+    visibility: hidden;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: black;
+    opacity: 0.8;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.endDiv {
+    align-items: center;
+    display: flex;
+    flex-direction: column;
+}
+
+.restartBtn {
+    height: 50px;
+    width: 150px;
+    opacity: 1;
+}
+
+.endMessage {
+    font-size: 50px;
+    color: red;
+    opacity: 1;
+}
